--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    center:10xp;
     /* background: rgba(0, 0, 0, 0.851); */
     background-image: url(hpbd2021p11.jpg);
     /* background-image: -webkit-gradient(
