--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     center:10xp;
     /* background: rgba(0, 0, 0, 0.851); */
-    background-image: url(hpbd2021p11.jpg);
+    background-image: url(hpbd2021p11a.jpg);
     /* background-image: -webkit-gradient(
         radial,
         50% 50%,
