--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ span {
 }
 
 .avatar__title {
+    color: rgba(242, 34, 45, 0.9);
     cursor: pointer;
     margin-top: -100px;
     -webkit-animation: balloon1 4s ease-in-out infinite;
